# battery_model_sensitivity_analysis

./: .gitignore  AUTHORS.md  LICENSE  README.md  pyproject.toml
battery_model_sensitivity_analysis/: __init__.py  plot.py  sensitivity_analysis.py  simulation.py  utils.py  xftg_load.csv
docs/: appendix-sa.tex  mainidea.md
notebooks/: 00_draft_example.ipynb  spme_geometric_sobol_analysis.ipynb
reports/: main.tex  si.tex
scripts/: paths.py  run_example.py
